Security - Authorization - JWT Token/AuthorizationPolicy-groups.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: booking-service
  namespace: default
spec: 
  action: ALLOW
  selector:
    matchLabels:
      app: booking-service
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]
    when:
    - key: request.auth.claims[groups]
      values: ["group2"]
